--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,9 @@ services:
       - "3000:3000"
     depends_on:
       - db
+  client:
+    build: ./quiz-app-client
+    ports:
+      - "8080:80"
+    depends_on: 
+      - backend
